---------------------------------------------------------------------------------------------------
Version: 0.4.12
Date: 6.1.26
  Changes:
    - Reduced Brightness on T2 NVGs.
    - Added armour control unit in to recipe for scrap-repressor mod.
    - Changed to another nanobots mod. Not as annoying as nanobots-refined.
    - nanobots-refined now marks as incompatible. Due do tech changes & tips and trick being replace with nanobots3
---------------------------------------------------------------------------------------------------
Version: 0.4.11
Date: 31.12.25
  Bugfixes:
    - Tech soft lock with K2.
    - Recipe crash regards to {type="fluid", name="kr-mineral-water", amount=100},
  Info:
    - Re released version as 0.4.11-1 visually 0.4.11
---------------------------------------------------------------------------------------------------
Version: 0.4.10
Date: 27.12.25
  Changes:
    - More changes for 2.0 Beta Angels.
    - Recipe & Tech overhaul.
---------------------------------------------------------------------------------------------------
Version: 0.4.9
Date: 26.12.25
  Bugfixes:
    - WIP Angels 2.0 update For PAR. https://github.com/SGZ-Creations/Power-Armour-Replacer/issues/4
  Thanks:
    - @kuroxusagi For thee git report.
---------------------------------------------------------------------------------------------------
Version: 0.4.8
Date: 26.12.25
  Bugfixes:
    - Loaded Milestones in wrong location.
    - Fixed simulation crash in C.A.S mod.
  Changes:
    - Reverted changed made for castra.
    - Moved Armour Crafting UI to after combat tab.
  Info:
    - Update Require C.A.S version.
    - Milestones still don't load.
    - If you want to fix this on your end Empty file in the following path:(Castra/prototypes/recipes-updates.lua)(Make sure that you leave 5 [table.insert] lines for Maraxsis Compatibility with castra.)
  Thanks:
    - @SuperHeroPuppy. Have me come up with a new Tank grid. to differentiate with vanilla.