@@ -4,6 +4,7 @@ Date: 6.1.26
   Changes:
     - Reduced Brightness on T2 NVGs.
     - Added armour control unit in to recipe for scrap-repressor mod.
+    - Added extra checks for metal & stars mod.
     - Changed to another nanobots mod. Not as annoying as nanobots-refined.
     - nanobots-refined now marks as incompatible. Due do tech changes & tips and trick being replace with nanobots3
 ---------------------------------------------------------------------------------------------------
